# CXX-exercise

./: .gitignore  README.md  cppcheck_report.txt
.github/workflows/: exercies-1-deploy.yml  exercise-2-app-and-tests-deploy.yml  hello-world-app-deploy.yml
Exercise-1/: CMakeLists.txt  README.md  main.cpp  utils.cpp
Exercise-1/headers/: Cat.hpp  Dog.hpp  Monkey.hpp  utils.hpp
Exercise-1/headers/Interfaces/: Animal.hpp
Exercise-1/src/: Cat.cpp  Dog.cpp  Monkey.cpp
Exercise-1/src/Interfaces/: Animal.cpp
Exercise-1/tests/: run_tests.cpp  unitTestAnimal.cpp
Exercise-2/: CMakeLists.txt  README.md  main.cpp
Exercise-2/headers/: MyList.hpp  MyList_template.hpp  utils.hpp
Exercise-2/src/: MyList.cpp
Exercise-2/tests/: myList_unittest.cpp  run_tests.cpp
Hello-world/: CMakeLists.txt  README.md  main.cpp
Hello-world/headers/: funcs.hpp
Hello-world/src/: funcs.cpp
Hello-world/tests/: funcs_unitTests.cpp
